# zk-misc

./: .gitignore  Cargo.toml  README.md  justfile
circuits/: mul-inputs.json  mul.circom
examples/: circom.rs  mul.rs  sha256.rs
src/lib/: groth16.rs  mod.rs  serdes.rs
